--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -1,8 +1,13 @@
- /* Navbar container */
+/* Font Import*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+/* Navbar container */
 .navbar {
     overflow: hidden;
     background-color: #333;
     font-family: Arial;
+    border-radius: 30px;
+    width: 30%;
   }
   
   /* Links inside the navbar */
@@ -35,7 +40,7 @@
   
   /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #0086bb;
   }
   
   /* Dropdown content (hidden by default) */
@@ -51,7 +56,7 @@
   
   /* Mega Menu header, if needed */
   .dropdown-content .header {
-    background: red;
+    background: #0086bb;
     padding: 16px;
     color: white;
   }
@@ -90,4 +95,9 @@
     content: "";
     display: table;
     clear: both;
-  } 
+  }
+
+  .image_drop {
+    text-align: center; 
+    filter: drop-shadow(10px 10px 9px #3a3287);
+  }
