--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -16,8 +16,9 @@
 
 .parallax {
     display: flex;
-    height: 50vh;
+    height: 100vh;
     width: 100%;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: scale-down;
