--- a/cell03/ex00/background.css
+++ b/cell03/ex00/background.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-.bottom {
-    margin-top: 50px;
-}
-
 .bottom_button {
     background: linear-gradient(90deg, #169B62 , white, #FF883E);
+    font-size: 3rem;
 }
